tests/baselines/reference/privateNamesAndMethods(target=es2022).errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts(16,9): error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndMethods.ts (1 errors) ====
    class A {
        #foo(a: number) {}
        async #bar(a: number) {}
        async *#baz(a: number) {
            return 3;
        }
        #_quux: number;
        get #quux (): number {
            return this.#_quux;
        }
        set #quux (val: number) {
            this.#_quux = val;
        }
        constructor () {
            this.#foo(30);
            this.#bar(30);
            ~~~~~~~~~~~~~
!!! error TS7062: A Promise must be awaited, returned, or explicitly ignored with the 'void' operator
            this.#baz(30);
            this.#quux = this.#quux + 1;
            this.#quux++;
     }
    }
    
    class B extends A {
        #foo(a: string) {}
        constructor () {
            super();
            this.#foo("str");
        }
    }
    